Fixed chat window responsiveness, glitching and scrollbar issues

--- a/src/main/web/app/scss/messages.scss
+++ b/src/main/web/app/scss/messages.scss
@@ -1,53 +1,69 @@
 $lightgray: #eaeaef;
 $primarylight: #ba3838;
 
-// Based on a pen by Jon Adams: https://codepen.io/pointlessjon/pen/hCEHG?page=1&
-
-.message {
-  position: relative;
-  background-color: $lightgray;
-  border-radius: 5px;
-  margin: 10px 15px !important;
-  padding: 10px;
-
-  &--left {
-    margin-right: 40% !important;
-    background: $primarylight;
-    color: white !important;
-
-    &::after {
-      z-index: 1;
-      content: ' ';
-      position: absolute;
-      border-left: 1em solid transparent;
-      border-top: 1em solid $primarylight;
-      left: -.95em;
-      top: .65em;
-    }
-  }
-
-  &--right {
-    margin-left: 40% !important;
-
-    &::after {
-      z-index: 1;
-      content: ' ';
-      position: absolute;
-      border-right: 1em solid transparent;
-      border-top: 1em solid $lightgray;
-      right: -.95em;
-      top: .65em;
-    }
-  }
-}
-
 .chat-window {
   width: 50vw;
-  min-width: 400px;
-  height: 400px;
+  max-width: 400px;
+  height: 75vh;
+  max-height: 400px;
   padding: 15px;
+
   @media screen and (max-width: 450px) {
     width: 80vw;
     min-width: 0px;
+  }
+
+  // Based on a pen by Jon Adams: https://codepen.io/pointlessjon/pen/hCEHG?page=1&
+
+  .message {
+    position: relative;
+    background-color: $lightgray;
+    border-radius: 5px;
+    margin: 10px 15px !important;
+    padding: 10px;
+
+    &--left {
+      margin-right: 40% !important;
+      background: $primarylight;
+      color: white !important;
+
+      &::after {
+        z-index: 1;
+        content: ' ';
+        position: absolute;
+        border-left: 1em solid transparent;
+        border-top: 1em solid $primarylight;
+        left: -.95em;
+        top: .65em;
+      }
+    }
+
+    &--right {
+      margin-left: 40% !important;
+
+      &::after {
+        z-index: 1;
+        content: ' ';
+        position: absolute;
+        border-right: 1em solid transparent;
+        border-top: 1em solid $lightgray;
+        right: -.95em;
+        top: .65em;
+      }
+    }
+  }
+
+  .message-container {
+    overflow-y: auto;
+    height: calc(100% - (48px + 15px));
+  }
+
+  .input-container {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    height: 48px;
   }
 }
